@@ -1,6 +1,7 @@
 package requestor;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
 
 public class RequestBuilder {
@@ -11,14 +12,16 @@ public class RequestBuilder {
     }
 
     public Request make(String request, Map<Integer, Object> args) {
-        Class aClass = requests.get(request);
+        Class<? extends Request> aClass = requests.get(request);
         Field[] fields = aClass.getFields();
         Object object = null;
+
         try {
-            object = aClass.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            object = aClass.getConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
             e.printStackTrace();
         }
+
         int i = 0;
         for (Field field : fields) {
             try {
